--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#https://mailtrap.io/home for varification
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=587
@@ -63,6 +64,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+#5267 3181 8797 5449
 VITE_APP_NAME="${APP_NAME}"
 RZR_KEY="rzp_test_Y4m7CrldXy6Mfk"
 RZR_SECRET="iPV3rBPyI2oESqXGZx4XckST"
